--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "clsx": "^2.1.1",
         "daisyui": "^5.3.7",
         "laravel-vite-plugin": "^2.0.0",
+        "laravel-vue-pagination": "^4.1.3",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.4.1",
         "tailwind-merge": "^3.2.0",
