--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+LIMIT_ITEMS_BY_PAGE=50
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
