--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-APP_NAME=Laravel
+APP_NAME="Damian - Zadania"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:mbYKFQSkxFvsiqLo60/8iH7IFIK5hupS4IZPPfopU/4=
 APP_DEBUG=true
-APP_URL=http://localhost
-
+APP_URL=http://localhost:99
+LIMIT_ITEMS_BY_PAGE=50
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
-
-LIMIT_ITEMS_BY_PAGE=50
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -22,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=sqlite
+# DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=task_manager
 # DB_USERNAME=root
-# DB_PASSWORD=
+# DB_PASSWORD=root
 DB_CONNECTION=mysql
 DB_HOST=mysql_manager_task
 DB_PORT=3306
