--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,6 @@ services:
   #     - 3307
   #   networks:
   #     - manager_task
-  #     # - jenkins_test
   php_manager_task:
     build: ./docker
     container_name: php_manager_task
@@ -29,12 +28,13 @@ services:
       - "./docker/php.ini:/usr/local/etc/php/conf.d/php.ini"
     restart: on-failure
     user: "${DOCKER_USER_ID:-1000}:${DOCKER_GROUP_ID:-1000}"
+    ports:
+      - "5173:5173"
     depends_on:
       - mysql_manager_task   
     networks:
       - manager_task
 
-      # - jenkins_test
   nginx_manager_task:
     image: nginx:1.21-alpine 
     container_name: nginx_manager_task
@@ -43,16 +43,14 @@ services:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: on-failure
     ports:
-      - "99:80"  
+      - "99:80"
     depends_on:
       - php_manager_task  
     networks:
       - manager_task
-      # - jenkins_test
 volumes:
   db-data:                           
 
 networks:
   manager_task:
-  # jenkins_test:
-#     external: true
+
